src/styles/main.css
/* ... */
/* End imported button code */

/* 
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     LOBBY SPECIFIC CSS CODES
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/

/* TITLES */

.title {
  background-color: var(--primary);
  color: white;
  font-family: 'Kanit', 'Sigmar One', cursive;
  font-size: 40pt;
  font-weight: bold;
  text-align: center;
}

.subtitle {
  color: black;
  display: inline-block;
  font-size: 25pt;
  font-weight: bold;
  margin: 20px 0 10px;
  padding: 0 20px;
  text-align: center;
}

/* FOOTER */

.footer {
  background-color: var(--primary);
  bottom: 0;
  color: white;
  font-size: 20px;
  height: 32px; /* image height */
  left: 0;
  padding: 5px;
  position: fixed;
  text-align: center;
  width: 100%;
}

.footer-div {
  position: absolute;
  top: 10px;
  right: 16px;
  font-size: 16px;
}

.footer-body {
  margin-bottom: 50px;
}

/* MATCHMAKING */

.mm-container {
  border-radius: 16px;
  border: solid var(--primary-dark);
  max-width: 800px;
  margin: 2px auto;
  text-align: center;
}

.mm-div-row {
  display: table;
  font-size: 18px;
  text-align: center;
  width: 100%;
}

.mm-div-cell {
  background-color: var(--primary);
  border-radius: 16px;
  border: solid white;
  color: white;
  display: table-cell;
  padding: 1px 10px;
}

.mm-table {
  font-size: 20px;
  table-layout: fixed;
  width: 100%;
}

.mm-td {
  background-color: white;
  border-radius: 16px;
  border: solid var(--primary) 2px;
  color: black;
  overflow-wrap: break-word;
  padding: 5px 10px;
  width: 20%;
}

.mm-td-active {
  border: solid red 4px;
}

/* PLAYER NAME ENTRY */

.padded_div {
  font-size: 20px;
  padding: 3px;
  text-align: center;
}

/* CREATE ROOM */

.input-box {
  border-radius: 10px;
  border: 2px solid #00acdd;
  box-sizing: border-box;
  font-size: 20px;
  margin: 8px 0;
}

select {
  font-size: 20px;
  margin: 2px;
  padding: 6px;
}

/* LOBBY */

.col_matchid {
  min-width: 12ch;
  text-align: center;
}

.col_seats {
  min-width: 5ch;
  text-align: center;
}

.col_setup {
  min-width: 12ch;
  text-align: center;
}

.errorMessage {
  color: red;
  padding: 3px;
  text-align: center;
}

.lobby-container {
  border-radius: 16px;
  border: solid var(--primary);
  margin: 2px auto;
  max-width: 600px;
}

.lobby-div-col {
  display: table-cell;
  max-width: 150px;
  padding: 1px 10px;
  vertical-align: middle;
}

.lobby-div-col-width {
  width: 25vw;
}

.lobby-div-row {
  background-color: var(--primary);
  border-radius: 16px;
  color: white;
  display: table;
  font-size: 18px;
  margin: 5px;
  padding: 1px 5px;
  text-align: center;
  width: 100%;
}

/* 
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     GAME SPECIFIC CSS CODES
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/

/* STACK TABLE FORMATTING */

.stack-table {
  margin: 0 auto;
}

/* ACTIONS & ITEM SELECTION */

.clickable {
  cursor: pointer;
}

.inactive {
  background-color: #a0a0a0 !important;
}

.button_active:after {
  background-color: red;
}

.button_hide {
  display: none;
}

/* STATUS BAR */

.status-bar {
  background-color: var(--primary);
  color: white;
  font-size: 18px;
  margin: 5px;
  padding: 2px;
  text-align: center;
  max-width: 630px;
  white-space: nowrap;
}

.status-bar-active {
  background-color: red;
  /*animation: change-color 5s ease-in-out infinite alternate;*/
}

/*@keyframes change-color {
  from {background-color: var(--primary);}
  to {background-color: var(--primary-dark);}
}*/

/* TOOLTIP */

.tooltip {
  visibility: hidden;
  width: 140px;
  background-color: #555;
  color: #fff;
  font-size: 12px;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
  left: 50%;
  margin-left: -70px;
  opacity: 0;
  transition: opacity 0.3s;
  white-space: pre-line;
}

.est_tooltip {
  top: 60px;
}

.mini_tooltip {
  top: calc(100% + 10px);
}

/* Tooltip arrow */
.mini_tooltip::after {
  content: '';
  position: absolute;
  bottom: 100%;
  left: 50%;
  margin-left: -10px;
  border-width: 10px;
  border-style: solid;
  border-color: transparent transparent #555 transparent;
}

/* ESTABLISHMENTS */

.est_td {
  padding: 3px;
  position: relative;
  height: 120px;
  width: 120px;
  border-radius: 8px;
}

.est_td:hover .tooltip {
  visibility: visible;
  opacity: 1;
}

.est_td:active {
  transform: scale(0.95);
}

.est_img_pri {
  background-color: var(--est-pri);
}

.est_img_pri_light {
  background-color: var(--est-pri-light);
}

.est_img_sec {
  background-color: var(--est-sec);
}

.est_img_sec_light {
  background-color: var(--est-sec-light);
}

.est_img_res {
  background-color: var(--est-res);
}

.est_img_res_light {
  background-color: var(--est-res-light);
}

.est_img_maj {
  background-color: var(--est-maj);
}

.est_img_maj_light {
  background-color: var(--est-maj-light);
}

.est_roll {
  margin: 0 auto;
  padding-left: 3px;
  padding-right: 3px;
  position: relative;
  top: -45px;
  width: fit-content;
}

.est_roll_box {
  border-radius: 5px;
  border-style: solid;
  border-width: 2.5px;
  color: white;
  display: inline-block;
  font-size: 14px;
  font-weight: bolder;
  padding-left: 4px;
  padding-right: 4px;
  text-align: center;
}

.est_type {
  color: white;
  font-size: 16px;
  position: absolute;
  right: 5px;
  top: 5px;
}

.est_name {
  color: white;
  font-size: 18px;
  width: 95%;
  text-align: center;
  position: absolute;
  top: 35px;
}

.est_cost {
  color: white;
  font-size: 14px;
  position: absolute;
  left: 5px;
  bottom: 5px;
}

.est_num {
  color: white;
  font-size: 14px;
  position: absolute;
  right: 5px;
  bottom: 5px;
}

/* LOGS AND CHAT */

.log_box {
  height: 584px; /* textpanel-box height (600px) minus padding (16px) */
  width: 284px; /* textpanel-box width (300px) minus padding (16px) */
  padding: 8px 8px 8px 8px;
  overflow: auto;
}
/* ... */

